[gd_scene load_steps=2 format=2]

[ext_resource path="res://HttpRequest.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 70.0557
margin_top = 61.9755
margin_right = 190.056
margin_bottom = 81.9755
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="CanvasLayer"]
[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer" method="_on_Button_pressed"]
[connection signal="request_completed" from="CanvasLayer/HTTPRequest" to="CanvasLayer" method="_on_HTTPRequest_request_completed"]
